objects/AcctSeed__Financial_Reporter_Settings__c/AcctSeed__Financial_Reporter_Settings__c.object-meta.xml
<CustomObject>
    <description>Used to store settings for financial reports.</description>
    <label>Financial Reporter Settings</label>
    <nameField>
        <displayFormat>FRS-{00000}</displayFormat>
        <label>Financial Reporter Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Reporter Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>