objects/AcctSeed__Financial_Reporter_Settings__c/fields/AcctSeed__Column_Header_Variant__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Column_Header_Variant__c</fullName>
    <label>Column Header Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Period</fullName>
            </value>
            <value>
                <fullName>Period End Date</fullName>
            </value>
            <value>
                <fullName>MM/YY</fullName>
                <label>MM/YYYY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>