objects/AcctSeed__Financial_Reporter_Settings__c/fields/AcctSeed__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Company_Name__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>