objects/AcctSeed__Financial_Reporter_Settings__c/fields/AcctSeed__Expand_Report_Rows__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Expand_Report_Rows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expand Report Rows</label>
    <type>Checkbox</type>
</CustomField>