objects/AcctSeed__Financial_Reporter_Settings__c/fields/AcctSeed__Rounding__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Rounding__c</fullName>
    <label>Rounding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Rounding</fullName>
            </value>
            <value>
                <fullName>Whole Amounts</fullName>
            </value>
            <value>
                <fullName>Round to 1000s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>